--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-ui": "^1.3.7",
     "jquery": "^3.2.1",
     "vue": "^2.3.3",
+    "vue-awesome-swiper": "^2.5.4",
     "vue-bootstrap-slider": "^1.1.0",
     "vue-router": "^2.3.1",
     "vue-simple-spinner": "^1.2.1",
